--- a/src/Match.css
+++ b/src/Match.css
@@ -557,3 +557,22 @@ img {
 .StatsTeamsPlayers .gold-diffs .diff.hidden {
   display: none;
 }
+
+.important {
+  animation-name: scale;
+  animation-duration: 1s;
+  transform: scale(1);
+  display: inline-block;
+}
+
+@keyframes scale {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(2);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
